# talks

./: README.md
async_and_friends/: example_one.py  pyproject.toml
asyncio_and_friends/: README.md  pyproject.toml
asyncio_and_friends/asyncio_and_friends/: example_one_asynchronous.py  example_one_synchronous.py  example_two_queues.py  podcast_feed_download_async.py  queue_example_from_python_docs.py  simple_http_example.py  weather_updates_queue.py
processing_osm_data_with_postgres_and_python/: NOTICE.txt  README.md  cities.json  examples.sh  main.lua  pyproject.toml
processing_osm_data_with_postgres_and_python/flex-config/: amenities-and-boundaries.lua  amenity.lua  building.lua  generic.lua  helpers.lua  indoor.lua  infrastructure.lua  landuse.lua  leisure.lua  natural.lua  place.lua  poi.lua  public_transport.lua  road.lua  shop.lua  tags.lua  traffic.lua  water.lua
processing_osm_data_with_postgres_and_python/osm2pgsql_flex_scripts/: admin-boundaries.lua  amenities-and-boundaries.lua  amenities.lua
processing_osm_data_with_postgres_and_python/osmprj/: config.py  db.py  http.py  main.py  osm.py  validators.py
processing_osm_data_with_postgres_and_python/osmprj/commands/: extract.py  import_data.py  report.py
processing_osm_data_with_postgres_and_python/osmprj/reports/: amenities.py
processing_osm_data_with_postgres_and_python/trashcan/: config.py  db.py  http.py  main.py  osm.py  osmium.py  types.py
processing_osm_data_with_postgres_and_python/trashcan/commands/: data.py  extract.py  import_data.py  report.py
processing_osm_data_with_postgres_and_python/trashcan/report/: amenities.py
processing_osm_data_with_postgres_and_python/trashcan/report/sql/: amenity_counts_by_city.sql
processing_osm_data_with_postgres_and_python/trashcan/reports/: amenities.py
processing_osm_data_with_postgres_and_python/trashcan/reports/sql/: amenity_counts_by_city.sql
