[tool.poetry]
name = "asyncio_and_friends"
version = "0.1.0"
description = ""
authors = ["Travis Hathaway <travis.j.hathaway@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
requests = "^2.27.1"
feedparser = "^6.0.8"
aiofiles = "^0.8.0"
click = "^8.0.3"
aiosqlite = "^0.17.0"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
podcast_dl_async = "asyncio_and_friends.podcast_feed_download_async:main"
podcast_dl_sync = "asyncio_and_friends.podcast_feed_download_sync:main"
simple_http = "asyncio_and_friends.simple_http_example:main"
weather_example = "asyncio_and_friends.weather_updates_queue:main"