[tool.poetry]
name = "trashcan"
version = "0.1.0"
description = "Sample project for working with OpenStreetMap data with PostgreSQL and Python"
authors = ["Your Name <you@example.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.4"
aiopg = "^1.3.3"
aiohttp = "^3.8.1"
osmium = "^3.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trash = 'trashcan.main:cli'
